syntax = "proto3";

package pb.v1;

option go_package = "F1zm0n.auth.v1;authv1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string err = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse { string err = 1; }
